trunk/Archive2/8e/6273cdc0170268/output
main.cpp:9:19: error: default initialization of an object of const type 'const foo' requires a user-provided default constructor
    constexpr foo bar1;
                  ^
1 error generated.
